styled homepage, card, profile

--- a/src/app/components/carousel/carousel.component.html
+++ b/src/app/components/carousel/carousel.component.html
@@ -2,7 +2,7 @@
   <div class="title">
     {{title}}
   </div>
-  <mat-divider class="devider"></mat-divider>
+  <mat-divider class="divider"></mat-divider>
 </div>
 <ngx-slick-carousel class="carousel" #carousel #slickModal="slick-carousel" [config]="slideConfig">
   <div ngxSlickItem *ngFor="let movie of movieList" class="slide">
