--- a/src/app/components/movie-card/movie-card.component.scss
+++ b/src/app/components/movie-card/movie-card.component.scss
@@ -61,7 +61,7 @@
     opacity: 1;
     width: 100%;
     height: 100%;
-    border: 1px solid #ffffff;
+   // border: 1px solid #ffffff;
     transition: 0.5s;
     // overflow-y: scroll;
   }
