--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,12 +1,12 @@
 <div class="profile">
   <div class="container">
 
-    <h1>{{user.name}}' profile</h1>
+    <h1>{{name}}'s profile</h1>
     <div class="user-details-picture">
       <span class="user-details">
         <h2>Account Details</h2>
         <h3>Email : {{user.email}}</h3>
-        <h3>User Role : {{user.userRole}}</h3>
+        <h3>Role : {{user.userRole}}</h3>
       </span>
     </div>
 
@@ -28,7 +28,7 @@
       <h1>Friends</h1>
       <div class="friends grid-list" [class.showMore]="showFriends">
         <div *ngFor="let friend of friends" class="friend-card">
-          <h4>{{friend}}</h4>
+          <h4>> {{friend}}</h4>
           <button class="friend-btn show-btn" (click)="changeData(friend.id)">Show movies and series</button>
         </div>
       </div>
@@ -38,15 +38,15 @@
 
     <div>
 
-      <h1>Request from friends</h1>
-      <div *ngFor="let fr of requestFriends">
+      <h1 *ngIf="areRequestFriends ">Request from friends</h1>
+      <div *ngFor="let fr of requestFriends" class="friend">
         <app-friends (refresh)="refreshApi()" [username]="fr"></app-friends>
       </div>
     </div>
 
     <div>
-      <h1>Add new friends</h1>
-      <div *ngFor="let fri of makeNewFriends">
+      <h1 *ngIf="areNewFriends">Add new friends</h1>
+      <div *ngFor="let fri of makeNewFriends" class="friend">
         <app-add-friends (refresh2)="refreshApi()" [username]="fri"></app-add-friends>
       </div>
     </div>
