Add time spent watching to profile

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -7,6 +7,7 @@
         <h2>Account Details</h2>
         <h3>Email : {{user.email}}</h3>
         <h3>Role : {{user.userRole}}</h3>
+        <h3>Time spent watching : {{timeSpentWatching}} minutes</h3>
       </span>
     </div>
 
