added rating attribute

--- a/src/app/components/movie-details-page/movie-details-page.component.html
+++ b/src/app/components/movie-details-page/movie-details-page.component.html
@@ -3,7 +3,7 @@
   <div class="header">
     <h1>{{this.item?.name}} &nbsp;<span>({{this.item?.releaseYear}})</span></h1>
     <div>
-      <p class="material-icons">Current rating: {{rating}}</p>
+      <p class="material-icons">Current rating: {{this.item?.rating}}</p>
     </div>
   </div>
   <div class="content-left">
