--- a/src/app/components/add-friends/add-friends.component.scss
+++ b/src/app/components/add-friends/add-friends.component.scss
@@ -13,6 +13,9 @@
             justify-content: center;
             align-items: center;
         }
+        button:disabled {
+            background-color: white;
+        }
     }
     
 }
